@@ -1,3 +1,4 @@
+    FIXED: Konfigurator: Dependency lists are now scrollable
     FIXED: Filter: Don't list comments in user/group chooser
 
 
